--- a/index.html
+++ b/index.html
@@ -2,48 +2,187 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Steed Media Mindmap</title>
   <style>
     body {
       margin: 0;
-      padding: 20px;
       font-family: 'Schibsted Grotesk', 'Instrument Sans', sans-serif;
-      background-color: #f4f1f1;
+      background: #f4f4f4;
       color: #2a423f;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-
     h1 {
+      text-align: center;
       color: #ee0505;
+      margin-top: 30px;
+      font-size: 2em;
     }
-
-    #mindmapContainer {
+    #mindmap {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .node circle {
+      fill: #2a423f;
+      stroke: #fff;
+      stroke-width: 2px;
+    }
+    .node text {
+      font-size: 14px;
+      fill: #2a423f;
+      pointer-events: none;
+    }
+    .link {
+      fill: none;
+      stroke: #ccc;
+      stroke-opacity: 0.5;
+      stroke-width: 2px;
+    }
+    .tooltip {
+      position: absolute;
+      background: white;
+      padding: 8px;
+      border: 1px solid #ccc;
+      font-size: 13px;
       display: none;
+    }
+    #login {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: #2D3047;
+      padding: 30px;
+      border-radius: 10px;
+    }
+    #login input {
+      padding: 10px;
+      font-size: 16px;
+      margin: 10px 0;
+    }
+    #login button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #2f3b2d;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    #login button:hover {
+      background-color: #ee0505;
     }
   </style>
 </head>
 <body>
+  <!-- Login Form -->
+  <div id="login">
+    <h2>Enter Password to Access the Mindmap</h2>
+    <input type="password" id="pw" placeholder="Password" />
+    <button onclick="checkPassword()">Enter</button>
+  </div>
 
-<h1>Steed Media Mindmap</h1>
+  <!-- Mindmap SVG Container -->
+  <div id="mindmap-container" style="display: none;">
+    <h1>Steed Media Mindmap</h1>
+    <svg id="mindmap"></svg>
+    <div class="tooltip" id="tooltip"></div>
+  </div>
 
-<script>
-  // Prompt for password before showing the mind map
-  const password = prompt("Enter the password to view the mind map:");
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script>
+    // Password Protection
+    function checkPassword() {
+      const correctPassword = "steed2025";
+      const enteredPassword = document.getElementById('pw').value;
 
-  if (password === "steed2025") {
-    // If password is correct, show the mind map
-    document.getElementById("mindmapContainer").style.display = "block";
-  } else {
-    alert("Incorrect password!");
-    window.location = "about:blank"; // Redirect if incorrect
-  }
-</script>
+      if (enteredPassword === correctPassword) {
+        // Hide login and show mindmap
+        document.getElementById('login').style.display = 'none';
+        document.getElementById('mindmap-container').style.display = 'block';
+        loadMindmapData();
+      } else {
+        alert("Incorrect password");
+      }
+    }
 
-<!-- Your mindmap content will be placed here -->
-<div id="mindmapContainer">
-  <div id="searchBar"></div>
-  <div id="mindmapContent"></div>
-  <!-- Additional code for displaying the mind map here -->
-</div>
+    // Load and Render Mindmap
+    function loadMindmapData() {
+      const width = window.innerWidth;
+      const height = window.innerHeight;
+      const radius = width / 3;
 
+      const svg = d3.select("#mindmap")
+        .attr("width", width)
+        .attr("height", height)
+        .append("g")
+        .attr("transform", `translate(${width / 2}, ${height / 2})`);
+
+      const tooltip = d3.select("#tooltip");
+
+      fetch("mindmap_data_synced.json")
+        .then(res => res.json())
+        .then(data => {
+          const root = {
+            name: "Steed Media",
+            children: Object.entries(data).map(([category, services]) => ({
+              name: category,
+              icon: services[0]?.icon || "🧩",
+              children: services.map(s => ({
+                name: s.service,
+                username: s.username,
+                description: s.description,
+                password: s.password,
+                notes: s.notes
+              }))
+            }))
+          };
+
+          const rootNode = d3.hierarchy(root);
+          const treeLayout = d3.tree().size([2 * Math.PI, radius]);
+          treeLayout(rootNode);
+
+          const link = svg.selectAll(".link")
+            .data(rootNode.links())
+            .join("path")
+            .attr("class", "link")
+            .attr("d", d3.linkRadial()
+              .angle(d => d.x)
+              .radius(d => d.y)
+            );
+
+          const node = svg.selectAll(".node")
+            .data(rootNode.descendants())
+            .join("g")
+            .attr("class", "node")
+            .attr("transform", d => `rotate(${d.x * 180 / Math.PI - 90}) translate(${d.y},0)`);
+
+          node.append("circle")
+            .attr("r", 5)
+            .on("mouseover", (e, d) => {
+              if (d.data.username || d.data.password || d.data.notes) {
+                tooltip.style("display", "block")
+                  .html(`<strong>${d.data.name}</strong><br>
+                         <b>User:</b> ${d.data.username || '-'}<br>
+                         <b>Pass:</b> ${d.data.password || '-'}<br>
+                         <b>Notes:</b> ${d.data.notes || '-'}`)
+                  .style("left", (e.pageX + 10) + "px")
+                  .style("top", (e.pageY - 28) + "px");
+              }
+            })
+            .on("mouseout", () => tooltip.style("display", "none"));
+
+          node.append("text")
+            .attr("dy", "0.31em")
+            .attr("x", d => d.x < Math.PI === !d.children ? 8 : -8)
+            .attr("text-anchor", d => d.x < Math.PI === !d.children ? "start" : "end")
+            .attr("transform", d => d.x >= Math.PI ? "rotate(180)" : null)
+            .text(d => d.data.icon ? `${d.data.icon} ${d.data.name}` : d.data.name);
+        });
+    }
+  </script>
 </body>
 </html>
