--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -88,9 +88,13 @@
 
     const tooltip = d3.select("#tooltip");
 
+    // Fetching mindmap data and adding debugging
     fetch("mindmap_data_synced.json")
       .then(res => res.json())
       .then(data => {
+        // Debugging: log the fetched data to console
+        console.log("Fetched Mindmap Data:", data);  // This will show in the browser's console
+
         const root = {
           name: "Steed Media",
           children: Object.entries(data).map(([category, services]) => ({
@@ -149,6 +153,9 @@
           .attr("text-anchor", d => d.x < Math.PI === !d.children ? "start" : "end")
           .attr("transform", d => d.x >= Math.PI ? "rotate(180)" : null)
           .text(d => d.data.icon ? `${d.data.icon} ${d.data.name}` : d.data.name);
+      })
+      .catch(error => {
+        console.error("Error fetching mindmap data:", error);  // Log any errors in fetching data
       });
   </script>
 </body>
