--- a/index.html
+++ b/index.html
@@ -1,162 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Steed Media Mindmap</title>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Schibsted Grotesk', 'Instrument Sans', sans-serif;
-      background: #f4f4f4;
-      color: #2a423f;
-    }
-
-    h1 {
-      text-align: center;
-      color: #ee0505;
-      margin-top: 30px;
-      font-size: 2em;
-    }
-
-    #mindmap {
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-      display: block;
-    }
-
-    .node circle {
-      fill: #2a423f;
-      stroke: #fff;
-      stroke-width: 2px;
-      transition: all 0.3s ease;
-    }
-
-    .node text {
-      font-size: 14px;
-      fill: #fff;
-      pointer-events: none;
-      transition: all 0.3s ease;
-    }
-
-    .link {
-      fill: none;
-      stroke: #ccc;
-      stroke-opacity: 0.5;
-      stroke-width: 2px;
-      transition: all 0.3s ease;
-    }
-
-    .tooltip {
-      position: absolute;
-      background: white;
-      padding: 8px;
-      border: 1px solid #ccc;
-      font-size: 13px;
-      display: none;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-      border-radius: 5px;
-    }
-
-    .node:hover circle {
-      fill: #ee0505;
-      cursor: pointer;
-    }
-
-    .node:hover text {
-      fill: #fff;
-    }
+    body { margin: 0; background: #f4f4f4; }
+    #mindmap { width: 100vw; height: 100vh; }
+    .node circle { fill: #2a423f; stroke: #fff; }
+    .node text { font-size: 12px; fill: white; }
+    .link { stroke: #ccc; stroke-opacity: 0.6; }
   </style>
 </head>
 <body>
-  <h1>Steed Media Mindmap</h1>
   <svg id="mindmap"></svg>
-  <div class="tooltip" id="tooltip"></div>
-
-  <script src="https://d3js.org/d3.v7.min.js"></script>
   <script>
-    const width = window.innerWidth;
-    const height = window.innerHeight;
-    const radius = width / 3;
-
-    const svg = d3.select("#mindmap")
-      .attr("width", width)
-      .attr("height", height)
-      .append("g")
-      .attr("transform", `translate(${width / 2}, ${height / 2})`);
-
-    const tooltip = d3.select("#tooltip");
-
-    // Fetching mindmap data and adding debugging
-    fetch("mindmap_data_synced.json")
+    fetch("mindmap_data.json")
       .then(res => res.json())
       .then(data => {
-        // Debugging: log the fetched data to console
-        console.log("Fetched Mindmap Data:", data);  // This will show in the browser's console
+        const width = window.innerWidth;
+        const height = window.innerHeight;
+        const svg = d3.select("#mindmap")
+          .attr("width", width)
+          .attr("height", height)
+          .append("g")
+          .attr("transform", `translate(${width/2},${height/2})`);
 
-        const root = {
-          name: "Steed Media",
-          children: Object.entries(data).map(([category, services]) => ({
-            name: category,
-            icon: services[0]?.icon || "🧩",
-            children: services.map(s => ({
-              name: s.service,
-              username: s.username,
-              description: s.description,
-              password: s.password,
-              notes: s.notes,
-              icon: s.icon || "🧩"
-            }))
-          }))
-        };
-
+        // Build the mindmap
+        const root = { name: "Steed Media", children: Object.entries(data).map(([k,v]) => 
+          ({ name: k, children: v })) };
+        
+        const radius = Math.min(width, height) / 2 - 40;
         const rootNode = d3.hierarchy(root);
-        const treeLayout = d3.tree().size([2 * Math.PI, radius]);
-        treeLayout(rootNode);
+        d3.tree().size([2 * Math.PI, radius])(rootNode);
 
-        const link = svg.selectAll(".link")
+        // Draw links/nodes
+        svg.selectAll(".link")
           .data(rootNode.links())
-          .join("path")
+          .enter().append("path")
           .attr("class", "link")
-          .attr("d", d3.linkRadial()
-            .angle(d => d.x)
-            .radius(d => d.y)
-          );
+          .attr("d", d3.linkRadial().angle(d => d.x).radius(d => d.y));
 
         const node = svg.selectAll(".node")
           .data(rootNode.descendants())
-          .join("g")
+          .enter().append("g")
           .attr("class", "node")
-          .attr("transform", d => `rotate(${d.x * 180 / Math.PI - 90}) translate(${d.y},0)`);
+          .attr("transform", d => `rotate(${d.x * 180/Math.PI - 90}) translate(${d.y},0)`);
 
-        node.append("circle")
-          .attr("r", 6)
-          .on("mouseover", (e, d) => {
-            if (d.data.username || d.data.password || d.data.notes) {
-              tooltip.style("display", "block")
-                .html(`
-                  <strong>${d.data.name}</strong><br>
-                  <b>User:</b> ${d.data.username || '-'}<br>
-                  <b>Pass:</b> ${d.data.password || '-'}<br>
-                  <b>Notes:</b> ${d.data.notes || '-'}
-                `)
-                .style("left", (e.pageX + 10) + "px")
-                .style("top", (e.pageY - 28) + "px");
-            }
-          })
-          .on("mouseout", () => tooltip.style("display", "none"));
-
+        node.append("circle").attr("r", 4.5);
         node.append("text")
           .attr("dy", "0.31em")
-          .attr("x", d => d.x < Math.PI === !d.children ? 8 : -8)
-          .attr("text-anchor", d => d.x < Math.PI === !d.children ? "start" : "end")
-          .attr("transform", d => d.x >= Math.PI ? "rotate(180)" : null)
-          .text(d => d.data.icon ? `${d.data.icon} ${d.data.name}` : d.data.name);
+          .attr("x", d => d.x < Math.PI === !d.children ? 6 : -6)
+          .text(d => d.data.name);
       })
-      .catch(error => {
-        console.error("Error fetching mindmap data:", error);  // Log any errors in fetching data
-      });
+      .catch(err => console.error("Error loading data:", err));
   </script>
 </body>
 </html>
